--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.device-simulator": "2.2.4-preview",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.0.2",
     "com.unity.render-pipelines.universal": "7.5.2",
     "com.unity.test-framework": "1.1.20",
     "com.unity.textmeshpro": "2.1.1",
